site/Presentation/Assets/css/print_Main.css
*
{
	background: none transparent;
}

.main
{
	font-size: 10pt;
	font-family: Times New Roman;
}

.main > p.title
{
	margin: 30px 0 0 1cm;
}

.blocks, .summary
{
	display: table;
	padding: 30px 0;
}

.summary
{
	page-break-before: always;
}

	.summary .title
	{
		margin-bottom: 30px;
	}

.header-box
{
	position: relative;
	margin-left: 1cm;
}

.blocks .header-box,
.summary .header-box
{
	margin-left: 0;
}

.header
{
	position: absolute;
	width: 100%;
	text-align: center;
	opacity: 0.5;
	top: 0;
	margin-top: -32px;
}

	.block .paragraph:first-child .header
	{
		margin-top: -32px;
	}

	.block:first-child .paragraph:first-child .header
	{
		margin-top: -81px;
	}

	.header .title
	{
		display: none;
	}

	.blocks .header .title,
	.summary .header .title
	{
		display: inline
	}

	.header .name
	{
		float: left;
	}

	.header .id
	{
		float: right;
	}

.footer
{
	position: relative;
}

	.footer span
	{
		position: absolute;
		width: 100%;
		text-align: center;
		opacity: 0.5;
		margin-top: 477px;
	}

	.summary .footer span
	{
		margin-bottom: -32px;
	}

	.block:first-child .paragraph:first-child .footer span
	{
		margin-top: 429px;
	}

img,
.menu,
.head,
.navigation,
.resizer,
.block-changer,
.screen-action,
.play,
.debug
{
	display: none;
}

.block:not(:first-child)
{
	padding-top: 38px;
}

.teller_Division
{
	border-bottom: 2px dotted;
	margin-bottom: 3px;
}

.paragraph
{
	break-inside: avoid;
}

.paragraph.break
{
	margin-top: 100px;
	break-before: page;
}

.block:first-child .paragraph.break:first-child
{
	margin-top: 0;
}

.block:first-child .paragraph:first-child .header .title
{
	display: none;
}

@page
{
	margin-top: 0.5cm;
	margin-bottom: 0;
	margin-left: 0.5cm;
	margin-right: 0.5cm;
}

.page-odd-item
{
	margin-left: 1cm;
}

.page-even-item
{
	margin-right: 1cm;
}

.header-aligner {
	border: #900 solid 1px;
	position: fixed;
	top: 0;
	height: 20px;
	width: 100%;
	opacity: 0.5;
}

.footer-aligner {
	border: #909 solid 1px;
	position: fixed;
	bottom: 0;
	height: 20px;
	width: 100%;
	opacity: 0.5;
}

.grid {
	border-right: 1px solid;
	height: 500px;
	position: absolute;
	top: 0;
	left: 45px;
	text-align: right;
	font-size: 7px;
}

	.grid:nth-child(10n+1),
	.grid:nth-child(10n+2) {
		border-right-color: #900;
		color: #900;
	}

	.grid:nth-child(10n+3),
	.grid:nth-child(10n+4) {
		border-right-color: #090;
		color: #090;
	}

	.grid:nth-child(10n+5),
	.grid:nth-child(10n+6) {
		border-right-color: #009;
		color: #009;
	}

	.grid:nth-child(10n+7),
	.grid:nth-child(10n+8) {
		border-right-color: #990;
		color: #990;
	}

	.grid:nth-child(10n+9),
	.grid:nth-child(10n+10) {
		border-right-color: #909;
		color: #909;
	}

	.grid:nth-child(2n) {
		opacity: 0.3;
	}

.trigger-hidden {
	display: block;
	background: #EEE;
}

.trigger-toggle {
	display: none;
}

.paragraph.break {
	break-before: avoid;
}

.page {
	display: none;
}

